samples/_failures_safe/1761626947_e0b7b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cde59b78.c: In function ‘main’:
./samples/SAFE/__tmp_cde59b78.c:158:13: error: expected expression at end of input
  158 |             current->dest <
      |             ^~~~~~~
./samples/SAFE/__tmp_cde59b78.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cde59b78.c:158:13: error: expected declaration or statement at end of input
